my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/EASZLARGE/EASZLARGE.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EASZLARGE.dml:7:7: In test
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EASZLARGE.dml:13:1: error EASZLARGE: array has too many elements (2147483648 >= 2147483648)
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EASZLARGE.dml:15:1: In g3[i < 65536]
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EASZLARGE.dml:17:5: error EASZLARGE: array has too many elements (2147483648 >= 2147483648)
